0025092: COMPSOLIDs are not exported to STEP

Now COMPSOLID is translated like a set of SOLIDs.

Test cases for issue CR25092